fixed horizontal scroll on mobile

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -168,6 +168,8 @@
 
 /* mobile */
 @media only screen and (max-width: 767px) {
+    body, html { overflow-x: hidden; }
+    
     .background {
         background-image: url('../images/zavi_cloud.jpg');
         background-size: cover;
